# nexus-router

./: ADAPTERS.generated.md  ADAPTERS.md  ADAPTER_SPEC.md  ARCHITECTURE.md  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
nexus_router/: __init__.py  dispatch.py  docs.py  event_store.py  events.py  exceptions.py  export.py  import_.py  plugins.py  router.py  schema.py  tool.py
nexus_router/schemas/: nexus-router.export.request.v0.3.json  nexus-router.export.response.v0.3.json  nexus-router.import.request.v0.3.json  nexus-router.import.response.v0.3.json  nexus-router.run.request.v0.7.json  nexus-router.run.response.v0.4.json  nexus-router.run.response.v0.7.json
scripts/: check_generated_docs.py
templates/adapter-template/: README.md  pyproject.toml
templates/adapter-template/.github/workflows/: adapter-ci.yml
templates/adapter-template/src/nexus_router_adapter_example/: __init__.py
templates/adapter-template/tests/: test_adapter.py
tests/: test_adapter_registry.py  test_apply_allowed.py  test_apply_policy_gate.py  test_declarative_selection.py  test_dispatch.py  test_docs.py  test_event_store_seq_monotonic.py  test_export_import.py  test_max_steps_enforced.py  test_plugins.py  test_router_registry.py  test_router_required_events.py  test_schema_contract.py  test_schema_validation.py  test_subprocess_adapter.py  test_validate_adapter.py
tests/fixtures/toy_adapter_pkg/: __init__.py
